disable github workflows from upstream repo

--- a/.github/workflows/job-build-flatpak.yaml
+++ b/.github/workflows/job-build-flatpak.yaml
@@ -1,8 +1,9 @@
 name: Ubuntu-flatpak
 
-on:
-  release:
-    types: [created]
+# on:
+#   release:
+#     types: [created]
+on: workflow_dispatch
 
 jobs:
   build-flatpak-bundle:
