--- a/.github/workflows/job-build-mac-10.13.yaml
+++ b/.github/workflows/job-build-mac-10.13.yaml
@@ -1,8 +1,9 @@
 name: Mac
 
-on:
-  release:
-    types: [created]
+# on:
+#   release:
+#     types: [created]
+on: workflow_dispatch
 
 jobs:
   build-on-mac-10_13:
