--- a/.github/workflows/job-build-mac-m1.yaml
+++ b/.github/workflows/job-build-mac-m1.yaml
@@ -1,8 +1,9 @@
 name: Mac
 
-on:
-  release:
-    types: [created]
+# on:
+#   release:
+#     types: [created]
+on: workflow_dispatch
 
 defaults:
   run:
