--- a/.github/workflows/job-test-raspberry-pi.yaml
+++ b/.github/workflows/job-test-raspberry-pi.yaml
@@ -1,10 +1,11 @@
 name: Raspberry Pi
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+on: workflow_dispatch
 
 jobs:
   test-on-pi:
