--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -14,6 +14,35 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      
+      - name: Install build dependencies
+        run: |
+          apt update
+          apt install --yes \
+            qtcreator \
+            qtbase5-dev \
+            qttools5-dev \
+            cmake \
+            make \
+            g++ \
+            xorg-dev \
+            libssl-dev \
+            libx11-dev \
+            libsodium-dev \
+            libgl1-mesa-glx \
+            libegl1-mesa \
+            libcurl4-openssl-dev \
+            libavahi-compat-libdnssd-dev \
+            qtdeclarative5-dev \
+            libqt5svg5-dev \
+            libsystemd-dev \
+            libnotify-dev \
+            libgdk-pixbuf2.0-dev \
+            libglib2.0-dev
+      
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 12
 
       - name: 'Install git core'
         run: npm install @actions/core @octokit/core
