--- a/.github/workflows/job-test-linux-ubuntu.yml
+++ b/.github/workflows/job-test-linux-ubuntu.yml
@@ -1,10 +1,10 @@
 name: Ubuntu
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+# on:
+#   push:
+#     branches: [master]
+#   pull_request:
+#     branches: [master]
 on: workflow_dispatch
 
 jobs:
