--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -17,8 +17,8 @@ jobs:
       
       - name: Install build dependencies
         run: |
-          apt update
-          apt install --yes \
+          sudo apt update
+          sudo apt install --yes \
             qtcreator \
             qtbase5-dev \
             qttools5-dev \
