make variables available in current step

--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -67,8 +67,10 @@ jobs:
       
       - name: 'Setup variables'
         run: |
-          echo SYNERGY_VERSION="$SYNERGY_VERSION_MAJOR.$SYNERGY_VERSION_MINOR.$SYNERGY_VERSION_PATCH" >> $GITHUB_ENV
-          echo SYNERGY_REVISION=`git rev-parse --short=8 HEAD` >> $GITHUB_ENV
+          SYNERGY_VERSION="$SYNERGY_VERSION_MAJOR.$SYNERGY_VERSION_MINOR.$SYNERGY_VERSION_PATCH"
+          SYNERGY_REVISION=`git rev-parse --short=8 HEAD`
+          echo SYNERGY_VERSION=$SYNERGY_VERSION >> $GITHUB_ENV
+          echo SYNERGY_REVISION=$SYNERGY_REVISION >> $GITHUB_ENV
           echo SYNERGY_DEB_VERSION="${SYNERGY_VERSION}.${SYNERGY_VERSION_STAGE}.${SYNERGY_REVISION}" >> $GITHUB_ENV
           echo SYNERGY_RPM_VERSION="${SYNERGY_VERSION}-${SYNERGY_VERSION_STAGE}.${SYNERGY_REVISION}" >> $GITHUB_ENV
       
