--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -174,6 +174,6 @@ jobs:
         with:
           name: Release ${{ github.ref_name }}
           body_path: changelog/changelog
-          files:
-            - deb-installer/*
-            - macos-installer/*
+          files: |
+            deb-installer/*
+            macos-installer/*
