fix typo runner is macos-latest not mac-latest

--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -96,7 +96,7 @@ jobs:
           path: debian/changelog
 
   create-dmg:
-    runs-on: mac-latest
+    runs-on: macos-latest
     env:
       GIT_COMMIT: ${{ github.sha }}
       Qt5_DIR: /usr/local/opt/qt@5
