--- a/CI/Linux/Dockerfile
+++ b/CI/Linux/Dockerfile
@@ -1,5 +1,10 @@
 FROM ubuntu
 
+ENV TZ=Etc/UTC
+
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
+    && echo $TZ > /etc/timezone
+
 RUN apt-get update && apt-get install -y \
         cmake \
         debhelper \
