--- a/.github/workflows/job-test-mac.yml
+++ b/.github/workflows/job-test-mac.yml
@@ -1,10 +1,11 @@
 name: Mac
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+# on:
+#   push:
+#     branches: [master]
+#   pull_request:
+#     branches: [master]
+on: workflow_dispatch
 
 jobs:
   test-macos:
