--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -10,6 +10,9 @@ jobs:
     container:
       image: asnell/synergy-builder
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     env:
       GIT_COMMIT: ${{ github.sha }}
     steps:
